force-app/main/default/objects/tkt_Ticket__c/tkt_Ticket__c.object-meta.xml
<CustomObject>
    <description>TNOX: Internal support ticket. Tracks issues, requests, and inquiries submitted by users. Auto-routed to queues based on category and priority. Supports file attachments, comments, and email notifications.</description>
    <label>Ticket</label>
    <nameField>
        <displayFormat>TKT-{00000}</displayFormat>
        <label>Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>