force-app/main/default/objects/tkt_Ticket__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>TNOX: The support agent or user responsible for resolving this ticket. Can be set manually or auto-populated by routing rules.</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Tickets Assigned</relationshipLabel>
    <relationshipName>tkt_TicketsAssigned</relationshipName>
    <type>Lookup</type>
</CustomField>