force-app/main/default/objects/tkt_Ticket__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>TNOX: Type of issue or request. Used by routing rules to assign tickets to specialized queues. Values: General Inquiry, Technical Issue, Access Request, Bug Report, Feature Request.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General Inquiry</fullName>
            </value>
            <value>
                <fullName>Technical Issue</fullName>
            </value>
            <value>
                <fullName>Access Request</fullName>
            </value>
            <value>
                <fullName>Bug Report</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>