force-app/main/default/objects/tkt_Ticket__c/fields/Close_Note__c.field-meta.xml
<CustomField>
    <fullName>Close_Note__c</fullName>
    <description>TNOX: Note provided by the submitter when closing the ticket</description>
    <label>Close Note</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>