force-app/main/default/objects/tkt_Ticket__c/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <description>TNOX: Date and time when the ticket was closed</description>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>