force-app/main/default/objects/tkt_Ticket__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>TNOX: Detailed description of the issue or request. Provides context for support agents working the ticket.</description>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>