force-app/main/default/objects/tkt_Ticket__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>TNOX: Expected resolution date based on priority and SLA</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>