force-app/main/default/objects/tkt_Ticket__c/fields/First_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Date__c</fullName>
    <description>TNOX: Date and time when support first responded to this ticket</description>
    <label>First Response Date</label>
    <type>DateTime</type>
</CustomField>