force-app/main/default/objects/tkt_Ticket__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <description>TNOX: Business impact scope of the issue</description>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
                <default>true</default>
                <label>Individual</label>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Division</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>