force-app/main/default/objects/tkt_Ticket__c/fields/Is_Confidential__c.field-meta.xml
<CustomField>
    <fullName>Is_Confidential__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TNOX: When checked, this ticket is only visible to the submitter, assigned user, queue members, and admins. Team sharing will be disabled.</description>
    <inlineHelpText>Mark as confidential to restrict visibility to only you, the assigned team, and administrators.</inlineHelpText>
    <label>Confidential</label>
    <type>Checkbox</type>
</CustomField>