force-app/main/default/objects/tkt_Ticket__c/fields/Legacy_Ticket_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Ticket_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>TNOX: Stores the original Salesforce ID from pre-migration system. Used for data migration tracking and idempotent imports.</description>
    <externalId>true</externalId>
    <label>Legacy Ticket Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>