force-app/main/default/objects/tkt_Ticket__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description>TNOX: Salesforce record ID that this ticket relates to</description>
    <label>Related Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>