force-app/main/default/objects/tkt_Ticket__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <description>TNOX: Documents how the issue was resolved for knowledge base</description>
    <label>Resolution</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>