force-app/main/default/objects/tkt_Ticket__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>TNOX: Brief summary of the issue or request. Displayed in list views, notifications, and search results.</description>
    <label>Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>