force-app/main/default/objects/tkt_Ticket__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>TNOX: The user who created this ticket. Auto-populated on creation. Used to send notification emails and control ticket visibility.</description>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Tickets Submitted</relationshipLabel>
    <relationshipName>tkt_TicketsSubmitted</relationshipName>
    <type>Lookup</type>
</CustomField>