force-app/main/default/objects/tkt_Ticket__c/listViews/All_Tickets.listView-meta.xml
<ListView>
    <fullName>All_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Category__c</columns>
    <columns>Submitted_By__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Tickets</label>
</ListView>