force-app/main/default/objects/tkt_Ticket__c/listViews/Critical_Tickets.listView-meta.xml
<ListView>
    <fullName>Critical_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Category__c</columns>
    <columns>Submitted_By__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Priority__c</field>
        <operation>equals</operation>
        <value>Critical</value>
    </filters>
    <label>Critical Tickets</label>
</ListView>