force-app/main/default/objects/tkt_Ticket__c/listViews/My_Tickets.listView-meta.xml
<ListView>
    <fullName>My_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Category__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Tickets</label>
</ListView>