force-app/main/default/objects/tkt_Ticket__c/listViews/tkt_Critical_Tickets_tkt_Ticket.listView-meta.xml
<ListView>
    <fullName>tkt_Critical_Tickets_tkt_Ticket</fullName>
    <filterScope>Queue</filterScope>
    <label>Critical Tickets</label>
    <queue>tkt_Critical_Tickets</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>