force-app/main/default/objects/tkt_Ticket__c/listViews/tkt_Support_Tickets_tkt_Ticket.listView-meta.xml
<ListView>
    <fullName>tkt_Support_Tickets_tkt_Ticket</fullName>
    <filterScope>Queue</filterScope>
    <label>Support Tickets</label>
    <queue>tkt_Support_Tickets</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>