force-app/main/default/objects/tkt_Ticket__c/listViews/tkt_Technical_Support_tkt_Ticket.listView-meta.xml
<ListView>
    <fullName>tkt_Technical_Support_tkt_Ticket</fullName>
    <filterScope>Queue</filterScope>
    <label>Koan Technical Support</label>
    <queue>tkt_Technical_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>